syntax = "proto3";

package catalog;
option go_package = "github.com/ahinestrog/mybookstore/proto/gen/catalog;catalogpb";

import "common.proto";

service Catalog {
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
  rpc GetBook(GetBookRequest) returns (Book);
}

message ListBooksRequest {
  string q = 1;                 // búsqueda por título/autor (opcional)
  common.PageRequest page = 2;  // opcional
}

message ListBooksResponse {
  repeated Book items = 1;
  common.PageResponse page = 2;
}

message GetBookRequest {
  int64 id = 1;
}

message Book {
  int64 id = 1;
  string title = 2;
  string author = 3;
  common.Money price = 4;
  string cover_url = 5;
  int64 created_unix = 6; // timestamp en segundos (unix)
}
